--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduPlatform - Онлайн платформа видео-курсов</title>
+    <title>vostok-massage.kg/</title>
     <meta
       name="description"
       content="Учитесь у лучших преподавателей. Выбирайте курсы по вашим интересам и развивайтесь вместе с нами."
     />
+    <!-- фавикон будет подставляться динамически через Header.jsx -->
   </head>
   <body>
     <div id="root"></div>
